--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 mysql:
-  host: localhost
+  host: mysql
   port: 3306
   user: root
   password: 55555
@@ -15,7 +15,7 @@ jwt:
   tokentime: 100
 
 redis:
-  addr: localhost:6379
+  addr: redis:6379
   db: 0
   username:
   password: 55555
